[package]
name = "alert-execution-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI argument parser
structopt = "0.3.23"
# HTTP client
reqwest = { version = "0.11.8", features = ["json"] }
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ASync runtime
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.11", features = ["full"] }
tower-service = "0.3.1"
tower-layer = "0.3.1"
futures-util = "0.3.19"
# Logging
log = "0.4.14"
log4rs = "1.0.0"